--- a/src/main.css
+++ b/src/main.css
@@ -25,6 +25,16 @@ html, body {
     border-radius: 0.5rem;
 }
 
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
